Block shortcuts when recording key sequences

Otherwise you can't select alt+a as a shortcut without triggering the
nmenomic generated shortcut on the "add application" button.

Testing done:
- clicked "Add custom shortcut", pressed alt+a, it was recorded
successfully

- focussed "Add custom shortcut", pressed alt+a, the relevant shortcut
activated

Note that isRecording was already declared, but not defined, which is
why it looks like my diff misses something.

BUG: 425979